# ai-engineer-training

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  TODOS.md  pyproject.toml
finetuning-large-language-models/: README.md  data-preparation.ipynb  evaluation.ipynb  pyproject.toml  training-process.ipynb
finetuning-large-language-models/finetuning_large_language_models/: __init__.py
homework_examples/week03-homework/: pyproject.toml
homework_examples/week03-homework-2/: docker-compose.yml  pyproject.toml
homework_examples/week03-homework-2/data/: companies.txt  faqs.csv  shareholders.csv
homework_examples/week03-homework-2/graph_rag/: api.py  config.py  graph_builder.py  main.py  query_engine.py  report.md
homework_examples/week03-homework-2/milvus_faq/: api.py  config.py  index_manager.py  main.py  report.md
homework_examples/week03-homework/chunking_research/: main.py  report.md
homework_examples/week03-homework/data/: 气候变化：全球性挑战与应对.md  量子计算：开启未来计算新纪元.md  锂电池健康管理：守护能量核心的科学与实践.md
homework_examples/week03-homework/ocr_research/: main.py  report.md
homework_examples/week04-homework/: pyproject.toml
homework_examples/week04-homework/smart_customer_service/: api.py  graph.py  report.md  services.py
homework_examples/week04-homework/smart_customer_service/tools/: __init__.py  order_tools.py  time_tool.py
homework_examples/week04-homework/tests/: test_features.py
homework_examples/week05-homework/: article_output_20250926_144236.md  pyproject.toml
homework_examples/week05-homework/multi-agent/: main.py  report.md
homework_examples/week05-homework/multi-agent/langgraph_app/: graph.py  nodes.py  state.py
homework_examples/week05-homework/multi-agent/mcp_server/: main.py  prompts.py
projects/fine-tuning-platform/: README.md  pyproject.toml
projects/fine-tuning-platform/app/: __init__.py  config.py  main.py
projects/fine-tuning-platform/app/domain/: __init__.py  datasets.py  jobs.py  metrics.py  swift_commands.py
projects/fine-tuning-platform/app/services/: __init__.py  inference.py  job_repository.py  (+2 more)
swift-m5-lab/: README.md  my_identity.jsonl  pyproject.toml
week03-homework/: README.md  pyproject.toml
week03-homework/chunking_research/: evaludator.py  main.py  report.md
week03-homework/core/: llm_service.py
week03-homework/data/: evaluation.json
week03-homework/ocr_research/: __init__.py  image_ocr_reader.py  main.py  report.md
week03-homework/ocr_research/docs/: DESIGN.md
week06/: P19-纵深防御体系.ipynb  README.md  Vanna_base_CN.py  chroma.sqlite3  p03-mcpVS.DSL.ipynb  p05-interVS.exterl.ipynb  p06-5个特征.ipynb  p07-常见场景.ipynb  p23-DBGateway.py  p26-DSLManager.ipynb  pyproject.toml  test_p23-DBGateway.py  vanna_demo.py  vanna_server.py
week06/p15-CoffeeDSL/: CoffeeMachine.g4  README.md  coffee.py  coffee_dsl.lark  coffee_rules.dsl.backup  coffee_rules_generated.dsl  requirements.txt
week06/p22/: README_DSL_Agent.md  coffee.dsl.tpl  coffee_agent.py  coffee_dsl.lark  coffee_rules_generated.dsl  demo.py  lark_parser.py  llm_parser.py
week07/: README.md  RPA.py  p04-shortMEM.py  p06-summaryMEM.py  p07-windowMEM.py  p08-vectorMEM.py  p09-faissMEM.py  p10-KnowledgeTripleMEM.py  p11-redisMEM.py  p13-toolRetry.py  p32-SLM.ipynb  pyproject.toml
week07/faiss_memory_index/: index.faiss  index.pkl
week07/knowledge_graph_storage/: graph_data.json  graph_index.pkl  networkx_graph.pkl
week07/standalone_projects/p25-CLIP/: clip_encoder.py  clip_image_search.py  config.py  image_processor.py  milvus_manager.py  requirements.txt
week07/standalone_projects/qlearn/: firstAPO.md  qlearn-1.py  qlearn-2.py  qlearn-3.py  qlearn-4.py  requirements.txt
week08/: ELK_使用说明.md  P15-ollama-fastapi-client.py  P15-ollama-fastapi-server.py  P16-FastAPI-Qwen-VL-client.py  P16-FastAPI-Qwen-VL-server.py  README.md  p41elk.py  pyproject.toml
week08/docker/: .dockerignore  .env.example  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  workflow.py  构建命令.txt
week08/elk/: docker-compose.yml  p41-check_elasticsearch.py
week08/elk/config/: logstash.conf  logstash.yml
week08/ollama-exporter-main/: Dockerfile  README.md  dashboard.json  dashboard_custom.json  ollama_exporter.py
week08/p17_webLLM/: .env.docker  .env.example  CELERY_SETUP.md  Dockerfile  README-Docker.md  README_DATABASE.md  celery_app.py  celery_tasks.py  config.py  database.py  database_sqlite.py  docker-compose.yml  docker-start.bat  docker-start.sh  gradio_app.py  init_db.py  main.py  models.py  requirements.txt  start_all.py  tasks.py  workflow.py
week08/p18_k8s/: .env.example  Dockerfile  canary-deployment.yaml  deployment.yaml  hpa.yaml  ingress.yaml  install.txt  istio-gray-deployment.yaml  requirements.txt  secret.yaml  service.yaml
week08/p18_k8s/app/: main.py
week08/prometheus-config/: docker-compose-prometheus.yml  prometheus.yml
week08/ray/: 0-装饰器的demo.py  1-通过 HTTP 调用部署.py  2-FastAPI.py  3-websocketClient.py  3-websocketServer.py  4-流式响应.py  5-客户端断开连接时终止流.py
week09/: 0_asyncio.ipynb  111.py  README.md  p11_1日志调试代码.py  p11_2慢速回调调试代码.py  p12_1Future.py  p12_2Task.py  p12_3Executor.py  p13_aiohttp.py  p14_concurrent.py  p16_1GIL.py  p16_2绕过GIL.py  p17_1realIO.py  p17_2sync.py  p17_3async.py  p17_4thread.py  p17_5process.py  p18_1IO密集场景综合性能测试.py  p18_2负载压力测试.py  p19_1上下文测量.py  p20_1cProfile.py  p20_2PySpy.py  p5_底层IO多路复用过程.py  p6_async语法糖.ipynb  p7_await方法.py  p8_1旧风格.py  p8_2新风格.py  pyproject.toml
week09/3/p24RESTful API设计规范与最佳实践/: restful_api端点尝试.md  restful_api设计原则演示.py
week09/3/p25使用Pydantic进行复杂数据校验与模型转换/: pydantic1.py
week09/3/p26WebSocket与大模型/: websocket与大模型.py  ws_test.html
week09/3/p28数据库连接池配置/: asyncpg异步数据库.py
week09/3/p29限流中间件实现/: 限流中间件.py
week09/3/p30缓存策略设计/: Redis异步客户端集成.py
week09/4/p32langchain调用/: 异步API.py
week09/4/p33自定义回调处理器/: 回调过程跟踪_qwen.py
week09/4/p34常见异步陷阱及规避/: LangGraph图的异步调用.py  LangGraph图的的超时控制.py  LangGraph图的的重试机制.py  test_retry.py
week09/5/: p36CUDA与异步GPU.py
week09/p21_多进程与协程混合/: __init__.py  factories.py  main.py  processors.py  run_demo.py  scheduler.py  strategies.py  utils.py
(+537 files in other folders)
