[project]
name = "swift-m5-lab"
version = "0.1.0"
description = "Fine-tuning lab using ms-swift and ModelScope"
requires-python = ">=3.12"
dependencies = [
    "ms-swift>=4.1.2",
    "modelscope>=1.34.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "accelerate>=1.13.0",
    "peft>=0.18.1",
    "trl>=0.29.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.6",
    "gradio>=5.50.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
