[project]
name = "week03-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"llama-index>=0.14.10",
	"llama-index-core>=0.14.10",
	"llama-index-embeddings-azure-openai>=0.4.1",
	"llama-index-embeddings-dashscope>=0.4.1",
	"llama-index-llms-azure-openai>=0.4.2",
	"llama-index-llms-dashscope>=0.5.1",
	"llama-index-llms-openai-like>=0.5.3",
	"llama-index-readers-file>=0.5.5",
	"load-dotenv>=0.1.0",
	"paddleocr>=3.3.2",
	"paddlepaddle>=3.2.2",
	"python-dotenv",
	# add your dependencies here and run `uv sync` to install them
]
