[project]
name = "week07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain ecosystem
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",

    # LangGraph
    "langgraph>=0.1.0",

    # Memory and language models
    "langmem",

    # Vector stores and embeddings
    "faiss-cpu>=1.7.0",
    "langchain-community[faiss]>=0.1.0",

    # DashScope for embeddings
    "dashscope>=1.14.0",

    # Redis for caching and memory
    "redis>=5.0.0",

    # NetworkX for graph operations
    "networkx>=3.0.0",

    # HTTP requests
    "requests>=2.28.0",

    # Standard library augmentations
    "typing-extensions>=4.0.0"
]
