[project]
name = "week05-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"dashscope>=1.24.6",
	"duckduckgo-search>=8.1.1",
	"fastmcp[cli]>=2.12.3",
	"langchain>=0.3.27",
	"langchain-community>=0.3.29",
	"langchain-mcp-adapters>=0.1.10",
	"langgraph>=0.6.7",
	"python-dotenv",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
